--- a/assets/custom.css
+++ b/assets/custom.css
@@ -121,14 +121,50 @@ section > .container{
   height: 100vh;
   width: 100vh;       /* adjust size */
   background: url('../assets/img/accent-wheel.avif') no-repeat center/contain;
-  animation: spin-please 20s linear infinite;
+  animation: spin-1-please 20s linear infinite;
   opacity: 0.15;       /* soft, non-distracting */
   z-index: 0;
 }
 
-@keyframes spin-please {
+@keyframes spin-1-please {
   from { transform: translateY(-50%) rotate(0deg); }
   to   { transform: translateY(-50%) rotate(360deg); }
+}
+
+#guide > .container::before{
+  content: "";
+  position: absolute;
+  top: 0%;
+  left: -100vh;
+  height: 200vh;
+  width: 200vh;       /* adjust size */
+  background: url('../assets/img/accent-wheel-2.avif') no-repeat center/contain;
+  animation: spin-2-please 60s linear infinite;
+  opacity: 0.15;       /* soft, non-distracting */
+  z-index: 0;
+}
+
+@keyframes spin-2-please {
+  from { transform: translateY(-50%) rotate(0deg); }
+  to   { transform: translateY(-50%) rotate(360deg); }
+}
+
+#guide > .container::after{
+  content: "";
+  position: absolute;
+  bottom: -150vh;
+  right: -150vh;
+  height: 300vh;
+  width: 300vh;       /* adjust size */
+  background: url('../assets/img/accent-wheel-3.avif') no-repeat center/contain;
+  animation: spin-3-please 60s linear infinite;
+  opacity: 0.15;       /* soft, non-distracting */
+  z-index: 0;
+}
+
+@keyframes spin-3-please {
+  from { transform: translateY(0%) rotate(0deg); }
+  to   { transform: translateY(0%) rotate(360deg); }
 }
 
 h2{
@@ -209,6 +245,18 @@ h2{
 
 .card.xbox{
   background: linear-gradient(90deg, rgba( 16, 123,  16, 0.0) 0%, rgba( 16, 123,  16, 0.2) 20%, rgba( 16, 123,  16, 0.2) 80%, rgba( 16, 123,  16, 0.0) 100%);
+}
+
+.card.pc-steam{
+  background: linear-gradient(90deg, rgba(  0,   0,   0, 0.0) 0%, rgba(  0,   0,   0, 0.2) 20%, rgba(  0,   0,   0, 0.2) 80%, rgba(  0,   0,   0, 0.0) 100%);
+}
+
+.card.amazon{
+  background: linear-gradient(90deg, rgba(255, 153,   0, 0.0) 0%, rgba(255, 153,   0, 0.2) 20%, rgba(255, 153,   0, 0.2) 80%, rgba(255, 153,   0, 0.0) 100%);
+}
+
+.card.pse{
+  background: linear-gradient(90deg, rgba( 13, 110, 253, 0.0) 0%, rgba( 13, 110, 253, 0.2) 20%, rgba( 13, 110, 253, 0.2) 80%, rgba( 13, 110, 253, 0.0) 100%);
 }
 
 .card-title {
